k8s/ingress-airflow-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  namespace: ai-core-pipeline
spec:
  ingressClassName: nginx
  rules:
    - host: airflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-api-server
                port:
                  number: 8080
